# screen_supervisor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  start.bat
configs/: config.example.toml
docs/: README.arch.md  README.config.md
src/screen_supervisor/: __init__.py  capturer.py  cli.py  config.py  scheduler.py  storage.py  supervisor.py
tests/: __init__.py  test_config.py  test_storage.py
